--- a/ESPDev/platformio.ini
+++ b/ESPDev/platformio.ini
@@ -16,6 +16,9 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.11.11
 	adafruit/Adafruit SSD1306@^2.5.13
 	arduino-libraries/NTPClient@^3.2.1
+	knolleary/PubSubClient@^2.8
 upload_speed = 1152000
 upload_protocol = espota
 upload_port = 192.168.8.133
+
+;upload_port = COM6
